# lifeEngine-Demo

./: .gitignore
game/: 2testbed_c0a0.bsp  3testbed_c0a0.bsp  Material.004.lmt  Material0004.lmt  Panzerkampfvagen VI E.lmd  box.lmd  config.cfg  error.lmt  gameinfo.txt  lua1.lua  lua2.lua  mat.lmt  testbed_c0a0.bsp
game/maps/: city.bsp  level.bsp
game/materials/: 1111111111111111.lmt  1DefaultMaterial.lmt  2DefaultMaterial.lmt  DefaultMaterial — копия (2).lmt  DefaultMaterial — копия (3).lmt  DefaultMaterial — копия (4).lmt  DefaultMaterial.lmt  Home.lmt  Material.lmt  None.lmt  error.lmt  qqqqqqqqqqqqqqqw.8.lmt  radio.lmt  sprite.lmt  sprite_anim.lmt  stones.lmt  text_versionGame.lmt  Материал.8.lmt  Материал.lmt
game/models/: Material0004.lmt  Quake_axe.lmd  axe.mdl  axe.phy  box.lmd  door02.mdl  door02.phy  freeze.lmd  freeze.mdl  home.mdl  hotel.mdl  hotel.phy  raddd.mdl  radio.mdl  radio.phy  stones.mdl  stones.phy  t.mdl  t.phy  table.mdl  table.phy  tv.mdl  tv.phy  wall.mdl  wall.phy  window01.mdl  window01.phy
game/scripts/: test.c
game/shaders/: lightmappedgeneric.shader  mytextshader.shader  spritegeneric.shader
src/: CMakeLists.txt  baseentity.cpp  baseentity.h  buildnum.cpp  buildnum.h  func_door.cpp  func_door.h  func_rotating.cpp  func_rotating.h  game.cpp  game.h  gamefactory.cpp  gamefactory.h  global.cpp  global.h  hud.cpp  hud.h  info_player_start.cpp  info_player_start.h  input.cpp  input.h  player.cpp  player.h  tsingleton.h  world.cpp  world.h
src/entites/: baseentity.cpp  baseentity.h  func_door.cpp  func_door.h  func_rotating.cpp  func_rotating.h  info_player_start.cpp  info_player_start.h  prop_directionallight.cpp  prop_directionallight.h  prop_pointlight.cpp  prop_pointlight.h  prop_spotlight.cpp  prop_spotlight.h  prop_static.cpp  prop_static.h
src/scripts_api/entites/: prop_static.cpp  prop_static.h
src/shaders/: baseshader.cpp  baseshader.h  mytextshader.cpp  mytextshader.h
src/shaders/shaders/glsl/: ps_mytextshader.glsl
(+109 files in other folders)
